* for BETA release only - Internet permission is used to track crashes.
* Better keyboard preview when selecting addons (themes, language, etc.).
* Now tells you about clipboard copy.
* A few bug fixes here and there.

More here: https://github.com/AnySoftKeyboard/AnySoftKeyboard/milestones/1.8-r2