@@ -106,31 +106,31 @@
   <string name="backword_support_off_summary">Retour arrière plus majuscule efface le dernier caractère</string>
   <string name="swipe_tweak_group">Modifier les actions gestuelles</string>
   <string name="swipe_up_action">Glisser vers le haut</string>
-  <string name="swipe_up_action_summary">Définir l\'action du glissé vers le haut. Actuellement, %s</string>
+  <string name="swipe_up_action_summary">Définir l\'action du glisser vers le haut. Actuellement : %s</string>
   <string name="swipe_up_action_title">Sélectionner l\'action du glissé vers le haut</string>
   <string name="swipe_up_from_spacebar_action">Glisser la barre d’espace vers le haut</string>
-  <string name="swipe_up_from_spacebar_action_summary">Définir l\'action du glissé de la barre d\'espace vers le haut. Actuellement, %s</string>
-  <string name="swipe_up_from_spacebar_action_title">Sélectionner l’action du glissé de la barre d’espace vers le haut</string>
+  <string name="swipe_up_from_spacebar_action_summary">Définir l\'action du glisser de la barre d\'espace vers le haut. Actuellement : %s</string>
+  <string name="swipe_up_from_spacebar_action_title">Sélectionner l’action du glisser de la barre d’espace vers le haut</string>
   <string name="swipe_down_action">Glisser vers le bas</string>
-  <string name="swipe_down_action_summary">Définir l\'action du glissé vers le bas. Actuellement, %s</string>
-  <string name="swipe_down_action_title">Sélectionner l\'action du glissé vers le bas</string>
+  <string name="swipe_down_action_summary">Définir l\'action du glisser vers le bas. Actuellement : %s</string>
+  <string name="swipe_down_action_title">Sélectionner l\'action du glisser vers le bas</string>
   <string name="swipe_left_action">Glisser vers la gauche</string>
-  <string name="swipe_left_action_summary">Définir l\'action du glissé vers la gauche. Actuellement, %s</string>
-  <string name="swipe_left_action_title">Sélectionner l\'action du glissé vers la gauche</string>
+  <string name="swipe_left_action_summary">Définir l\'action du glisser vers la gauche. Actuellement : %s</string>
+  <string name="swipe_left_action_title">Sélectionner l\'action du glisser vers la gauche</string>
   <string name="swipe_right_action">Glisser vers la droite</string>
-  <string name="swipe_right_action_summary">Définir l\'action du glissé vers la droite. Actuellement, %s</string>
-  <string name="swipe_right_action_title">Sélectionner l\'action du glissé vers la droite</string>
+  <string name="swipe_right_action_summary">Définir l\'action du glisser vers la droite. Actuellement : %s</string>
+  <string name="swipe_right_action_title">Sélectionner l\'action du glisser vers la droite</string>
   <string name="swipe_right_space_bar_action">Glisser la barre d\'espace à droite</string>
-  <string name="swipe_right_space_bar_action_summary">Définir l\'action du glissé de la barre d\'espace vers la droite. Actuellement, %s</string>
-  <string name="swipe_right_space_bar_action_title">Sélectionner l\'action du glissé vers la droite</string>
+  <string name="swipe_right_space_bar_action_summary">Définir l\'action du glisser de la barre d\'espace vers la droite. Actuellement : %s</string>
+  <string name="swipe_right_space_bar_action_title">Sélectionner l\'action du glisser vers la droite</string>
   <string name="swipe_left_space_bar_action">Glisser la barre d\'espace à gauche</string>
   <string name="swipe_left_space_bar_action_summary">Définir l\'action du glissé de la barre d\'espace vers la gauche. Actuellement, %s</string>
-  <string name="swipe_left_space_bar_action_title">Sélectionner l\'action glisser à gauche</string>
+  <string name="swipe_left_space_bar_action_title">Sélectionner l\'action du glisser à gauche</string>
   <string name="swipe_left_two_fingers_action">Glisser à 2 doigts vers la gauche</string>
-  <string name="swipe_left_two_fingers_action_summary">Définir l\'action du glissé à 2 doigts vers la gauche. Actuellement, %s</string>
+  <string name="swipe_left_two_fingers_action_summary">Définir l\'action du glisser à 2 doigts vers la gauche. Actuellement : %s</string>
   <string name="swipe_right_two_fingers_action">Glisser à 2 doigts vers la droite</string>
-  <string name="swipe_right_two_fingers_action_summary">Définir l\'action du glissé à 2 doigts vers la droite. Actuellement, %s</string>
-  <string name="swipe_right_two_fingers_action_title">Sélectionner l\'action du glissé vers la droite</string>
+  <string name="swipe_right_two_fingers_action_summary">Définir l\'action du glisser à 2 doigts vers la droite. Actuellement : %s</string>
+  <string name="swipe_right_two_fingers_action_title">Sélectionner l\'action du glisser vers la droite</string>
   <string name="pinch_gesture_action">Geste de pincement</string>
   <string name="pinch_gesture_action_title">Sélectionner l’action du geste de pincement</string>
   <string name="pinch_gesture_action_summary">Définir l\'action du geste de pincement. Actuellement, %s</string>
@@ -158,15 +158,15 @@
   <string name="swipe_action_name_compact_layout_to_right">Disposition compact à droite</string>
   <string name="swipe_action_name_compact_layout_to_left">Disposition compact à gauche</string>
   <string name="swipe_action_name_utility_keyboard">Afficher le clavier utilitaire</string>
-  <string name="settings_swipe_velocity_threshold_title">Seuil de vitesse du glissé</string>
-  <string name="settings_swipe_velocity_threshold_summary">La vitesse minimale pour prise en compte du glissé. Actuellement, %s</string>
+  <string name="settings_swipe_velocity_threshold_title">Seuil de vitesse du glisser</string>
+  <string name="settings_swipe_velocity_threshold_summary">La vitesse minimale pour prise en compte du glisser. Actuellement : %s</string>
   <string name="settings_swipe_velocity_very_slow">Très lente</string>
   <string name="settings_swipe_velocity_slow">Lente</string>
   <string name="settings_swipe_velocity_normal">Normale</string>
   <string name="settings_swipe_velocity_fast">Rapide</string>
   <string name="settings_swipe_velocity_very_fast">Très rapide</string>
-  <string name="settings_swipe_distance_threshold_title">Seuil de distance du glissé</string>
-  <string name="settings_swipe_distance_threshold_summary">La distance minimale pour prise en compte du glissé. Actuellement, %s</string>
+  <string name="settings_swipe_distance_threshold_title">Seuil de distance du glisser</string>
+  <string name="settings_swipe_distance_threshold_summary">La distance minimale pour prise en compte du glisser. Actuellement : %s</string>
   <string name="settings_swipe_distance_very_short">Très courte</string>
   <string name="settings_swipe_distance_short">Courte</string>
   <string name="settings_swipe_distance_normal">Normale</string>
@@ -174,13 +174,13 @@
   <string name="settings_swipe_distance_very_long">Très longue</string>
   <string name="hardware_keys_group">Configuration des touches physiques</string>
   <string name="volume_key_for_left_right_support">Touche de volume pour la gauche/droite</string>
-  <string name="volume_key_for_left_right_support_on_summary">Désactiver le déplacement du curseur par les touches de volume</string>
-  <string name="volume_key_for_left_right_support_off_summary">La touche de volume + déplace la curseur à gauche, la
-        touche - à droite
+  <string name="volume_key_for_left_right_support_on_summary">Désactiver le déplacement du curseur par les boutons de volume</string>
+  <string name="volume_key_for_left_right_support_off_summary">Le bouton de volume + déplace la curseur à gauche, le
+        bouton - à droite
     </string>
   <string name="camera_key_for_backspace_backword_support">Utiliser la touche de l\'appareil photo pour effacer le dernier mot/caractère</string>
-  <string name="camera_key_for_backspace_backword_support_on_summary">Restaurer la fonction de la touche appareil photo</string>
-  <string name="camera_key_for_backspace_backword_support_off_summary">Un appui à mi-course de la touche appareil photo supprime
+  <string name="camera_key_for_backspace_backword_support_on_summary">Restaurer la fonction du bouton appareil photo</string>
+  <string name="camera_key_for_backspace_backword_support_off_summary">Un appui à mi-course du bouton de l\'appareil photo supprime
         le dernier caractère, un appui complet le dernier mot
     </string>
   <string name="menu_even_more_settings">Encore plus…</string>
@@ -191,7 +191,7 @@
   <string name="use_user_dictionary_on_summary">Suggérer des mots ajoutés par l\'utilisateur (appui double sur une suggestion pour ajouter)</string>
   <string name="always_use_fallback_user_dictionary">Utiliser le dictionnaire utilisateur de secours</string>
   <string name="always_use_fallback_user_dictionary_on_summary">Utiliser uniquement le dictionnaire utilisateur intégré de AnySoftKeyboard (non recommandé).</string>
-  <string name="always_use_fallback_user_dictionary_off_summary">Essayer d\'abord utiliser le dictionnaire utilisateur intégré Android (recommandé).</string>
+  <string name="always_use_fallback_user_dictionary_off_summary">Essayer d\'abord d\'utiliser le dictionnaire utilisateur intégré Android (recommandé).</string>
   <string name="use_auto_dictionary">Dictionnaire automatique</string>
   <string name="use_auto_dictionary_dialog_title">Sélectionner la méthode d\'apprentissage</string>
   <string name="use_auto_dictionary_summary">Retenir automatiquement les nouveaux mots. Méthode d\'apprentissage : %s</string>
@@ -205,15 +205,15 @@
   <string name="next_words_dictionary_summary">Utiliser le mot précédent pour les suggestions : %s</string>
   <string name="use_next_words_dictionary_aggressiveness">Agressivité de concordance du mot suivant</string>
   <string name="use_next_words_dictionary_aggressiveness_minimal">Suggestions minimales</string>
-  <string name="use_next_words_dictionary_aggressiveness_medium">Agressivité de concordance moyenne</string>
+  <string name="use_next_words_dictionary_aggressiveness_medium">Agressivité moyenne</string>
   <string name="use_next_words_dictionary_aggressiveness_maximum">Afficher plusieurs suggestions</string>
   <string name="use_next_words_dictionary_aggressiveness_summary">Agressivité de concordance pour suggérer le mot suivant : %s</string>
-  <string name="auto_pick_suggestion_aggressiveness_title">Sélection auto. de l\'agressivité de concordance pour suggérer</string>
+  <string name="auto_pick_suggestion_aggressiveness_title">Sélection auto. de l\'agressivité pour suggérer</string>
   <string name="auto_pick_suggestion_aggressiveness_none">Désactivé</string>
-  <string name="auto_pick_suggestion_aggressiveness_minimal">Agressivité de concordance minimale</string>
-  <string name="auto_pick_suggestion_aggressiveness_medium">Agressivité de concordance moyenne</string>
-  <string name="auto_pick_suggestion_aggressiveness_high">Agressivité de concordance élevée</string>
-  <string name="auto_pick_suggestion_aggressiveness_extreme">Agressivité de concordance extrême</string>
+  <string name="auto_pick_suggestion_aggressiveness_minimal">Agressivité minimale</string>
+  <string name="auto_pick_suggestion_aggressiveness_medium">Agressivité moyenne</string>
+  <string name="auto_pick_suggestion_aggressiveness_high">Agressivité élevée</string>
+  <string name="auto_pick_suggestion_aggressiveness_extreme">Agressivité extrême</string>
   <string name="auto_pick_suggestion_aggressiveness_summary">Niveau d\'agressivité de concordance : %s</string>
   <string name="use_contacts_dictionary">Dictionnaire des contacts</string>
   <string name="use_contacts_dictionary_on_summary">Suggérer les noms de la liste de contacts</string>
@@ -228,22 +228,22 @@
   <string name="show_keyboard_name_on_summary">Afficher le nom du clavier sur la barre d\'espace</string>
   <string name="show_keyboard_name_off_summary">Ne jamais afficher le nom du clavier</string>
   <string name="show_hint_text">Afficher texte d\'indication</string>
-  <string name="show_hint_text_on_summary">Afficher les textes d\'indication sur les touches, si géré par le thème</string>
+  <string name="show_hint_text_on_summary">Afficher les indications sur les touches, si géré par le thème</string>
   <string name="show_hint_text_off_summary">Jamais afficher les textes d\'indication sur les touches</string>
-  <string name="use_custom_hint_align">Changer la position de l\'indication</string>
+  <string name="use_custom_hint_align">Changer la position d\'indication</string>
   <string name="use_custom_hint_align_on_summary">Utiliser la position personnalisée pour le texte d\'indication</string>
-  <string name="use_custom_hint_align_off_summary">Utiliser la position du thème pour le texte d\'indication</string>
+  <string name="use_custom_hint_align_off_summary">Utiliser la position du thème pour l\'indication</string>
   <string name="custom_hint_align">Alignement horizontal personnalisé pour l\'indication</string>
-  <string name="custom_hint_align_summary">Aligner le texte d\'indication à gauche, au centre ou à droite de la touche</string>
-  <string name="settings_custom_hint_align_dialog_title">Sélectionner l\'alignement horizontal pour le texte d\'indication</string>
+  <string name="custom_hint_align_summary">Aligner l\'indication à gauche, au centre ou à droite de la touche</string>
+  <string name="settings_custom_hint_align_dialog_title">Sélectionner l\'alignement horizontal pour l\'indication</string>
   <string-array name="custom_hint_align_types">
     <item>Gauche</item>
     <item>Centre</item>
     <item>Droite</item>
   </string-array>
   <string name="custom_hint_valign">Alignement vertical personnalisé pour l\'indication</string>
-  <string name="custom_hint_valign_summary">Aligner le texte d\'indication en haut ou en bas de la touche</string>
-  <string name="settings_custom_hint_valign_dialog_title">Sélectionner l\'alignement vertical pour le texte d\'indication</string>
+  <string name="custom_hint_valign_summary">Aligner l\'indication en haut ou en bas de la touche</string>
+  <string name="settings_custom_hint_valign_dialog_title">Sélectionner l\'alignement vertical pour l\'indication</string>
   <string-array name="custom_hint_valign_types">
     <item>Haut</item>
     <item>Bas</item>
@@ -409,8 +409,8 @@
   <string name="unicode_activity_quick_text_key_name">Activité</string>
   <string name="unicode_office_quick_text_key_name">Bureau</string>
   <string name="unicode_occasions_quick_text_key_name">Occasions</string>
-  <string name="multitap_timeout_title">Délai du multi-tape</string>
-  <string name="multitap_timeout_summary">Délai entre deux tapes</string>
+  <string name="multitap_timeout_title">Délai de répétition (frappe)</string>
+  <string name="multitap_timeout_summary">Délai entre deux appuis</string>
   <string name="settings_multitap_timeout_disabled">Désactivé</string>
   <string name="settings_multitap_timeout_faster">Plus rapide</string>
   <string name="settings_multitap_timeout_fast">Rapide</string>
@@ -419,7 +419,7 @@
   <string name="settings_multitap_timeout_slower">Plus lent</string>
   <string name="settings_multitap_timeout_never">Toujours attendre</string>
   <string name="long_press_timeout_title">Durée de l’appui long</string>
-  <string name="long_press_timeout_summary">Durée de l’appui pour être considéré comme prolongé</string>
+  <string name="long_press_timeout_summary">Durée de l’appui pour être considéré comme long</string>
   <string name="settings_long_press_timeout_faster">Plus rapide</string>
   <string name="settings_long_press_timeout_fast">Rapide</string>
   <string name="settings_long_press_timeout_normal">Normale</string>
@@ -431,7 +431,7 @@
   <string name="workaround_disable_rtl_fix_summary_on">Utiliser le système pour l’écriture de droite à gauche (téléphones SE)</string>
   <string name="workaround_disable_rtl_fix_summary_off">Utiliser AnySoftKeyboard pour l’écriture de droite à gauche</string>
   <string name="settings_split_state_title">﻿État initial du clavier scindé/fusionné</string>
-  <string name="settings_split_state_summary">Définir si le clavier est scindé en valeur par défaut. Maintenant : %s</string>
+  <string name="settings_split_state_summary">Définir si le clavier est scindé par défaut. Actuellement : %s</string>
   <string name="settings_split_state_merged_always">Démarrer normalement</string>
   <string name="settings_split_state_split_in_landscape">Démarrer scindé en mode paysage</string>
   <string name="settings_split_state_split_always">Démarrer scindé</string>
